<resources>
    <string name="app_name">Lethal Company</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_game">Game</string>
    <string name="menu_moons">Moons</string>
    <string name="menu_bestiary">Bestiary</string>
    <string name="menu_store">Store</string>
</resources>