<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lethalcompany.ui.home.HomeFragment"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/nav_game"
        android:name="com.example.lethalcompany.ui.game.GameFragment"
        android:label="@string/menu_game"/>

    <fragment
        android:id="@+id/nav_moons"
        android:name="com.example.lethalcompany.ui.moons.MoonsFragment"
        android:label="@string/menu_moons"/>

    <fragment
        android:id="@+id/nav_bestiary"
        android:name="com.example.lethalcompany.ui.bestiary.BestiaryFragment"
        android:label="@string/menu_bestiary" />
    <fragment
        android:id="@+id/nav_store"
        android:name="com.example.lethalcompany.ui.store.StoreFragment"
        android:label="@string/menu_store"/>
</navigation>